# feast-agent

./: .gitignore  README.md  pyproject.toml
feast_agent/: __init__.py  agent.py  cli.py  config.py  prompts.py  state.py
feast_agent/tools/: __init__.py  auth.py  feature_views.py  inspect.py  materialize.py  optimize.py  registry.py  transformations.py  validate.py
