[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feast-agent"
version = "0.1.0"
description = "LLM-powered Data Agent for Feast feature store management"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "feast",
    "langchain>=1.2.15",
    "langgraph>=1.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.2"]
anthropic = ["langchain-anthropic>=0.2"]
ollama = ["langchain-ollama>=0.2"]
all = [
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-ollama>=0.2",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "ruff>=0.8.0",
]

[project.scripts]
feast-agent = "feast_agent.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["feast_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
